[package]
name = "drone-riot-conv"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.3", features = ["serde-1"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"

[profile.release]
lto = true
